# xplainable

./: .cursorrules  .gitignore  .readthedocs.yaml  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  __pyproject.toml  _build.py  addition.prof  build.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-pypi.yml  read-the-docs-build.yml  update-docs.yml  xplainable-docs.yml
docs/: conf.py  index.rst  migration-guide.md
docs/advanced_concepts/: custom_transformers.rst  evolutionary_networks.rst  partitioned_models.rst  rapid_refitting.rst
docs/api/: api_client.rst  binary_classification.rst  cloud-integration.md  multiclass_classification.rst  nlp.rst  preprocessing.rst  regression.rst
docs/getting_started/: about_xplainable.rst  installation.rst
examples/: Bank_Marketing.ipynb  Concrete_Compressive_Strength.ipynb  Dozer_Price_Prediction.ipynb  Feature_Interactions_Example.ipynb  HELOC_Credit_Risk.ipynb  House_Prices_Regression.ipynb  Instacart-Product-Reorder-Prediction.ipynb  Instacart_Product_Reorder_Prediction.ipynb  Lead_Scoring_Prediction.ipynb  Power_Plant_Energy_Output.ipynb  Repurchase_Window_Prediction.ipynb  Shopify_Customer_Churn.ipynb  Shopify_Order_Returns.ipynb  Telco_Churn.ipynb  Telco_Churn_Updated_Client.ipynb  Tool_Failure.ipynb
scripts/: README.md  check_performance.py  update_changelog_metrics.py
src/xplainable/: utils.py
src/xplainable/models/: classification.py
tests/: test_interactions.py  test_smoke.py
tests/core/ml/: test_constructor.py
website/: convert_ipynb_to_mdx.py  docusaurus.config.js  package-lock.json  package.json  requirements.txt  tutorials.json  versions.json
website/docs/advanced-topics/: XEvolutionaryNetwork.md  _category_.json  custom-transformers.md  partitioned-models.md  rapid-refitting.md
website/docs/getting-started/: _category_.json  about-xplainable.md  installation.md
website/docs/python-api/: classification-binary.md  classification-multiclass.md  preprocessing.md  regression.md
website/docs/tutorials/: Concrete Compressive Strength.mdx  Concrete_Compressive_Strength.ipynb  Dozer Price Prediction.mdx  Dozer_Price_Prediction.ipynb  HELOC_Credit_Risk.ipynb  Heloc Credit Risk.mdx  House Prices Regression.mdx  Shopify Customer Churn.mdx  (+17 more)
xplainable/: __init__.py  _dependencies.py  _version.py  client.py  config.py  exceptions.py  gui.py  quality.py  utils.py
xplainable/callbacks/: optimisation.py
xplainable/client/: _client.py  access.py  client.py  datasets.py  init.py
xplainable/cloud/: _base_model.py  classification.py  regression.py
xplainable/core/: models.py
xplainable/feature_selection/: classification.py  graph.py
xplainable/gpt/: report.py
xplainable/gui/: __init__.py  classification.py  displays.py  loading.py  preprocessor.py  regression.py
xplainable/metrics/: metrics.py
xplainable/mlflow/: __init__.py  utils.py  xp_mlflow.py
xplainable/models/: _base_model.py  classification.py  regression.py
xplainable/preprocessing/: __init__.py  interactions.py  pipeline.py  transformers.py
xplainable/quality/: __init__.py  scanner.py
xplainable/utils/: __init__.py  activation.py  api.py  collections.py  dualdict.py  encoders.py  exceptions.py  handlers.py  helpers.py  loaders.py  model_parsers.py  numba_funcs.py  ray_utils.py  svgs.py  widgets.py  xwidgets.py
xplainable/visualisation/: __init__.py  explain.py  network.py  regression.py
(+145 files in other folders)
