[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {} 

[project]
name = "xplainable"
version = "1.3.0"
authors = [
  { name="xplainable pty ltd", email="contact@xplainable.io" },
]
description = "Real-time explainable machine learning for business optimisation"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
  "xplainable-client>=1.3.0",
  "hyperopt>=0.2.7",
  "numba>=0.57.0",
  "numpy>=2.0.0",
  "pandas>=2.2.3",
  "pyperclip>=1.8.2",
  "scikit-learn>=1.3.0",
  "scipy>=1.6.2",
  "urllib3>=1.26.5",
  "psutil>=5.9.4",
  "joblib>=1.2.0",
  "networkx>=2.8.0",
  "tqdm>=4.62.3",
  "ipython",
  "packaging",
  "requests"
]

[project.optional-dependencies]
gui = [
  "jupyter-client==7.3.2",
  "ipywidgets>=8.0.5",
  "matplotlib>=3.4.2",
  "seaborn>=0.11.1",
  "traitlets>=5.5.0",
  "drawsvg>=2.1.1",
  "gradio>=3.35.0"
]

plotting = [
  "matplotlib>=3.4.2",
  "seaborn>=0.11.1",
  "altair>=5.0.1",
  "plotly>=5.1.0"
]
