[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]} 

[project]
name = "xplainable"
version = "1.3.1"
authors = [
  { name="xplainable pty ltd", email="contact@xplainable.io" },
]
description = "Real-time explainable machine learning for business optimisation"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dynamic = ["dependencies"]

classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
gui = [
  "jupyter-client==7.3.2",
  "ipywidgets>=8.0.5",
  "matplotlib>=3.4.2",
  "seaborn>=0.11.1",
  "traitlets>=5.5.0",
  "drawsvg>=2.1.1",
  "gradio>=3.35.0"
]

plotting = [
  "matplotlib>=3.4.2",
  "seaborn>=0.11.1",
  "altair>=5.0.1",
  "plotly>=5.1.0"
]
